--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "description": "PWM module for controlling the Adafruit 16-channel 12-bit PWM/Servo driver",
   "dependencies": {
-    "i2c": ">0.1.4",
+    "i2c-bus": "^5.0.0",
     "sleep": ">1.1.3"
   },
   "repository": "https://github.com/johntreacy/adafruit-pca9685.git",
